# binary-decimal-converter

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: binary-to-decimal.hh  decimal-to-binary.hh  test-object.hh
src/: binary-to-decimal.cc  decimal-to-binary.cc  main.cc
test/: binary-to-decimal.test.cc  decimal-to-binary.test.cc
